# iris

./: .gitignore  Cargo.toml  HACKING.md  HELP.md  README.md  iris.toml  jit-diag.sh  profile.sh
gltest/: main.c
rules/irix/: keyboard-issues.md  networking.md
rules/jit/: dispatch-architecture.md  probe-tuning.md  profile-persistence.md  speculative-safety-net.md  store-compilation.md  sync-architecture.md  verify-mode.md
rules/testing/: disk-image-hygiene.md
src/: config.rs  cow_disk.rs  devlog.rs  disp.rs  ds1x86.rs  gdb_stub.rs  hal2.rs  hpc3.rs  ioc.rs  lib.rs  machine.rs  main.rs  mc.rs  mem.rs  mips_cache_v2.rs  mips_core.rs  mips_exec.rs  mips_exec_test.rs  mips_tlb.rs  mips_tlb_test.rs  net.rs  physical.rs  pit8254.rs  prom.rs  ps2.rs  rex3.rs  rex3_tests.rs  scsi.rs  seeq8003.rs  timer.rs  traits.rs  ui.rs  vc2.rs  vino.rs  wd33c93a.rs  z85c30.rs
src/jit/: async_compiler.rs  cache.rs  codegen_test.rs  compiler.rs  context.rs  dispatch.rs  helpers.rs  mod.rs  profile.rs  trace.rs
src/rex3_jit/: compiler.rs  mod.rs  profile.rs
tools/: diff-trace.py
